--- a/CS-4/htmltut.html
+++ b/CS-4/htmltut.html
@@ -208,6 +208,20 @@
       <a href="https://jigsaw.w3.org/css-validator/" target="_blank">CSS Validation</a>
     </div>
 
+    <h3>HTML Definitions</h3>
+    <ul>
+      <li id="item1"></li>
+      <li id="item2"></li>
+      <li id="item3"></li>
+      <li id="item4"></li>
+      <li id="item5"></li>
+      <li id="item6"></li>
+      <li id="item7"></li>
+      <li id="item8"></li>
+      <li id="item9"></li>
+      <li id="item10"></li>
+    </ul>
+
       <footer>
         <a class="btn btn-primary btn-md" role="button" href="https://www.otc.edu" target="_blank">OTC</a>
       </footer>
@@ -217,6 +231,7 @@
     <script src='https://getbootstrap.com/assets/js/vendor/popper.min.js'></script>
     <script src='https://getbootstrap.com/dist/js/bootstrap.min.js'></script>
     <script src='https://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js'></script>
-
+    <script src='js/arrays.js'></script>
+    <script src='js/displayDefs.js'></script>
   </body>
   </html>
